--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -72,6 +72,7 @@ nav {
   box-shadow: -4px 4px 0px 0px #000;
   text-decoration: none;
   padding: 10px 20px;
+  margin: 0px 10px 0px 0px;
 }
 
 .container-section2 {
