--- a/css/page.css
+++ b/css/page.css
@@ -60,6 +60,16 @@ a {
     margin-bottom: 10px;
   }
 
+  img {
+    border: 2px solid #000;
+    color: #000;
+    background: #FFF;
+    box-shadow: -4px 4px 0px 0px #000;
+    text-decoration: none;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+  }
+
   button {
     border: 2px solid #ffffff;
     color: #ffffff;
@@ -74,4 +84,9 @@ a {
 
   .grap {
  width: 100%;
+  }
+
+  .container-img{
+    width: 500px;
+    height: 300px;
   }
